Created library for selection filters

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,14 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "paths": {
+      "ngx-dhis2-selection-filters": [
+        "dist/ngx-dhis2-selection-filters"
+      ],
+      "ngx-dhis2-selection-filters/*": [
+        "dist/ngx-dhis2-selection-filters/*"
+      ]
+    }
   }
 }
