--- a/angular.json
+++ b/angular.json
@@ -18,11 +18,9 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -50,11 +48,13 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ngx-dhis2-selecton-filters-module:build"
+            "browserTarget": "ngx-dhis2-selecton-filters-module:build",
+            "proxyConfig": "proxy-config.json"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ngx-dhis2-selecton-filters-module:build:production"
+              "browserTarget":
+                "ngx-dhis2-selecton-filters-module:build:production"
             }
           }
         },
@@ -71,26 +71,16 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
-            "styles": [
-              "src/styles.css"
-            ],
+            "styles": ["src/styles.css"],
             "scripts": [],
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ]
+            "assets": ["src/favicon.ico", "src/assets"]
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "tsConfig": ["src/tsconfig.app.json", "src/tsconfig.spec.json"],
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
@@ -107,7 +97,8 @@
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ngx-dhis2-selecton-filters-module:serve:production"
+              "devServerTarget":
+                "ngx-dhis2-selecton-filters-module:serve:production"
             }
           }
         },
@@ -115,9 +106,48 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": "e2e/tsconfig.e2e.json",
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": ["**/node_modules/**"]
+          }
+        }
+      }
+    },
+    "ngx-dhis2-selection-filters": {
+      "root": "projects/ngx-dhis2-selection-filters",
+      "sourceRoot": "projects/ngx-dhis2-selection-filters/src",
+      "projectType": "library",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig":
+              "projects/ngx-dhis2-selection-filters/tsconfig.lib.json",
+            "project": "projects/ngx-dhis2-selection-filters/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "project":
+                "projects/ngx-dhis2-selection-filters/ng-package.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/ngx-dhis2-selection-filters/src/test.ts",
+            "tsConfig":
+              "projects/ngx-dhis2-selection-filters/tsconfig.spec.json",
+            "karmaConfig": "projects/ngx-dhis2-selection-filters/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/ngx-dhis2-selection-filters/tsconfig.lib.json",
+              "projects/ngx-dhis2-selection-filters/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
