--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@hisptz/ngx-dhis2-http-client": "^1.0.2",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
+    "angular-tree-component": "^7.2.1",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "lodash": "^4.17.10",
