added orgUnit filter module

--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "@hisptz/ngx-dhis2-http-client": "^1.0.2",
+    "@hisptz/ngx-dhis2-org-unit-filter": "file:../ngx-dhis2-org-unit-filter/dist/ngx-dhis2-org-unit-filter/hisptz-ngx-dhis2-org-unit-filter-0.0.1.tgz",
+    "@ngrx/effects": "^6.0.1",
+    "@ngrx/entity": "^6.0.1",
+    "@ngrx/store": "^6.0.1",
+    "@ngrx/store-devtools": "^6.0.1",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "angular-tree-component": "^7.2.1",
@@ -40,6 +45,7 @@
     "@angular/cli": "~6.1.0",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
+    "@ngrx/schematics": "^6.0.1",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
