--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "@hisptz/ngx-dhis2-http-client": "^1.0.2",
+    "@hisptz/ngx-dhis2-selection-filters": "^1.0.1",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "angular-tree-component": "^7.2.1",
@@ -37,7 +38,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
     "@angular-devkit/build-ng-packagr": "~0.6.8",
-    "@angular/cli": "~6.0.8",
+    "@angular/cli": "~6.1.0",
     "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
