--- a/projects/ngx-dhis2-selection-filters/package.json
+++ b/projects/ngx-dhis2-selection-filters/package.json
@@ -2,8 +2,8 @@
   "name": "@hisptz/ngx-dhis2-selection-filters",
   "version": "1.0.1",
   "peerDependencies": {
-    "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
-    "@angular/core": "^6.0.0-rc.0 || ^6.0.0",
+    "@angular/common": "^6.0.0 || ^7.0.0",
+    "@angular/core": "^6.0.0 || ^7.0.0",
     "lodash": "^4.17.10",
     "angular-tree-component": "^7.2.1"
   }
