--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod --aot",
     "build-lib": "ng build --prod ngx-dhis2-selection-filters",
+    "build-lib-dev": "npm run build-lib && cd dist/ngx-dhis2-selection-filters && npm pack && cd ../../ && npm install dist/ngx-dhis2-selection-filters/*.tgz",
+    "publish": "npm run build-lib && cd dist/ngx-dhis2-selection-filters && npm publish --access public && cd ../../",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -22,7 +24,7 @@
     "@angular/platform-browser-dynamic": "^7.2.11",
     "@angular/router": "^7.2.11",
     "@hisptz/ngx-dhis2-http-client": "^1.0.2",
-    "@hisptz/ngx-dhis2-selection-filters": "^1.0.1",
+    "@hisptz/ngx-dhis2-selection-filters": "file:dist/ngx-dhis2-selection-filters/hisptz-ngx-dhis2-selection-filters-1.0.1.tgz",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "angular-tree-component": "^7.2.1",
