--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,10 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets"
+            ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
@@ -53,8 +56,7 @@
           },
           "configurations": {
             "production": {
-              "browserTarget":
-                "ngx-dhis2-selecton-filters-module:build:production"
+              "browserTarget": "ngx-dhis2-selecton-filters-module:build:production"
             }
           }
         },
@@ -71,16 +73,26 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
-            "styles": ["src/styles.css"],
+            "styles": [
+              "src/styles.css"
+            ],
             "scripts": [],
-            "assets": ["src/favicon.ico", "src/assets"]
+            "assets": [
+              "src/favicon.ico",
+              "src/assets"
+            ]
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["src/tsconfig.app.json", "src/tsconfig.spec.json"],
-            "exclude": ["**/node_modules/**"]
+            "tsConfig": [
+              "src/tsconfig.app.json",
+              "src/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
@@ -97,8 +109,7 @@
           },
           "configurations": {
             "production": {
-              "devServerTarget":
-                "ngx-dhis2-selecton-filters-module:serve:production"
+              "devServerTarget": "ngx-dhis2-selecton-filters-module:serve:production"
             }
           }
         },
@@ -106,7 +117,9 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": "e2e/tsconfig.e2e.json",
-            "exclude": ["**/node_modules/**"]
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
@@ -120,14 +133,12 @@
         "build": {
           "builder": "@angular-devkit/build-ng-packagr:build",
           "options": {
-            "tsConfig":
-              "projects/ngx-dhis2-selection-filters/tsconfig.lib.json",
+            "tsConfig": "projects/ngx-dhis2-selection-filters/tsconfig.lib.json",
             "project": "projects/ngx-dhis2-selection-filters/ng-package.json"
           },
           "configurations": {
             "production": {
-              "project":
-                "projects/ngx-dhis2-selection-filters/ng-package.prod.json"
+              "project": "projects/ngx-dhis2-selection-filters/ng-package.prod.json"
             }
           }
         },
@@ -135,8 +146,7 @@
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "main": "projects/ngx-dhis2-selection-filters/src/test.ts",
-            "tsConfig":
-              "projects/ngx-dhis2-selection-filters/tsconfig.spec.json",
+            "tsConfig": "projects/ngx-dhis2-selection-filters/tsconfig.spec.json",
             "karmaConfig": "projects/ngx-dhis2-selection-filters/karma.conf.js"
           }
         },
@@ -147,11 +157,16 @@
               "projects/ngx-dhis2-selection-filters/tsconfig.lib.json",
               "projects/ngx-dhis2-selection-filters/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**"]
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
     }
   },
-  "defaultProject": "ngx-dhis2-selecton-filters-module"
+  "defaultProject": "ngx-dhis2-selecton-filters-module",
+  "cli": {
+    "defaultCollection": "@ngrx/schematics"
+  }
 }
