--- a/package.json
+++ b/package.json
@@ -24,7 +24,12 @@
     "@angular/platform-browser-dynamic": "^7.2.11",
     "@angular/router": "^7.2.11",
     "@hisptz/ngx-dhis2-http-client": "^1.0.2",
+    "@hisptz/ngx-dhis2-org-unit-filter": "file:../ngx-dhis2-org-unit-filter/dist/ngx-dhis2-org-unit-filter/hisptz-ngx-dhis2-org-unit-filter-1.0.13.tgz",
     "@hisptz/ngx-dhis2-selection-filters": "file:dist/ngx-dhis2-selection-filters/hisptz-ngx-dhis2-selection-filters-1.0.1.tgz",
+    "@ngrx/effects": "^7.4.0",
+    "@ngrx/entity": "^7.4.0",
+    "@ngrx/store": "^7.4.0",
+    "@ngrx/store-devtools": "^7.4.0",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "angular-tree-component": "^7.2.1",
@@ -43,6 +48,7 @@
     "@angular/cli": "~7.3.7",
     "@angular/compiler-cli": "^7.2.11",
     "@angular/language-service": "^7.2.11",
+    "@ngrx/schematics": "^7.4.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
