--- a/projects/ngx-dhis2-selection-filters/package.json
+++ b/projects/ngx-dhis2-selection-filters/package.json
@@ -7,6 +7,7 @@
     "lodash": "^4.17.10",
     "angular-tree-component": "^7.2.1",
     "@hisptz/ngx-dhis2-org-unit-filter": "^1.0.13",
-    "ngx-color-picker": "^7.4.0"
+    "ngx-color-picker": "^7.4.0",
+    "ng2-dragula": "^2.1.1"
   }
 }
