--- a/package.json
+++ b/package.json
@@ -14,22 +14,25 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animation": "^4.0.0-beta.8",
     "@angular/animations": "^7.2.11",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "^7.2.11",
     "@angular/compiler": "^7.2.11",
     "@angular/core": "^7.2.11",
     "@angular/forms": "^7.2.11",
     "@angular/http": "^7.2.11",
+    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "^7.2.11",
     "@angular/platform-browser-dynamic": "^7.2.11",
     "@angular/router": "^7.2.11",
     "@hisptz/ngx-dhis2-http-client": "^1.0.2",
     "@hisptz/ngx-dhis2-org-unit-filter": "file:../ngx-dhis2-org-unit-filter/dist/ngx-dhis2-org-unit-filter/hisptz-ngx-dhis2-org-unit-filter-1.0.13.tgz",
     "@hisptz/ngx-dhis2-selection-filters": "file:dist/ngx-dhis2-selection-filters/hisptz-ngx-dhis2-selection-filters-1.0.2.tgz",
-    "@iapps/ngx-dhis2-data-filter": "^1.0.0-beta.1",
+    "@iapps/ngx-dhis2-data-filter": "^1.0.0-beta.2",
     "@iapps/ngx-dhis2-http-client": "^2.0.2",
     "@iapps/ngx-dhis2-org-unit-filter": "^1.0.17",
-    "@iapps/ngx-dhis2-period-filter": "^1.0.0-beta.4",
+    "@iapps/ngx-dhis2-period-filter": "^1.0.0-beta.5",
     "@ngrx/effects": "^7.4.0",
     "@ngrx/entity": "^7.4.0",
     "@ngrx/store": "^7.4.0",
@@ -39,6 +42,8 @@
     "angular-tree-component": "^7.2.1",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "lodash": "^4.17.11",
     "ng2-dnd": "^5.0.2",
     "ng2-dragula": "^2.1.1",
