--- a/package.json
+++ b/package.json
@@ -27,8 +27,6 @@
     "@angular/platform-browser-dynamic": "^7.2.11",
     "@angular/router": "^7.2.11",
     "@hisptz/ngx-dhis2-http-client": "^1.0.2",
-    "@hisptz/ngx-dhis2-org-unit-filter": "file:../ngx-dhis2-org-unit-filter/dist/ngx-dhis2-org-unit-filter/hisptz-ngx-dhis2-org-unit-filter-1.0.13.tgz",
-    "@hisptz/ngx-dhis2-selection-filters": "file:dist/ngx-dhis2-selection-filters/hisptz-ngx-dhis2-selection-filters-1.0.2.tgz",
     "@iapps/ngx-dhis2-data-filter": "^1.0.0-beta.3",
     "@iapps/ngx-dhis2-http-client": "^2.0.2",
     "@iapps/ngx-dhis2-org-unit-filter": "^1.0.17",
@@ -39,7 +37,6 @@
     "@ngrx/store-devtools": "^7.4.0",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
-    "angular-tree-component": "^7.2.1",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
@@ -49,13 +46,13 @@
     "ng2-dragula": "^2.1.1",
     "ngx-color-picker": "^7.4.0",
     "ngx-pagination": "^3.1.1",
-    "rxjs": "^6.4.0",
+    "rxjs": "^6.5.2",
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
     "@angular-devkit/build-ng-packagr": "~0.13.0",
-    "@angular/cli": "~7.3.7",
+    "@angular/cli": "~7.3.9",
     "@angular/compiler-cli": "^7.2.11",
     "@angular/language-service": "^7.2.11",
     "@ngrx/schematics": "^7.4.0",
@@ -79,7 +76,7 @@
     "tsickle": ">=0.25.5",
     "tslib": "^1.9.0",
     "tslint": "~5.9.1",
-    "typescript": "~3.2.4"
+    "typescript": "^3.2.4"
   },
   "config": {
     "commitizen": {
