--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy-config.json",
     "build": "ng build --prod --aot",
     "build-lib": "ng build --prod ngx-dhis2-selection-filters",
     "build-lib-dev": "npm run build-lib && cd dist/ngx-dhis2-selection-filters && npm pack && cd ../../ && npm install dist/ngx-dhis2-selection-filters/*.tgz",
@@ -37,7 +37,7 @@
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "bootstrap": "^4.3.1",
-    "core-js": "^3.1.2",
+    "core-js": "^2.6.9",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.11",
