--- a/.mergify.yml
+++ b/.mergify.yml
@@ -2,6 +2,7 @@ pull_request_rules:
   - name: automatic merge on CI success
     conditions:
       - status-success=continuous-integration/travis-ci/pr
+      - base=master
     actions:
       merge:
         method: merge
