--- a/package.json
+++ b/package.json
@@ -15,17 +15,16 @@
   "private": true,
   "dependencies": {
     "@angular/animation": "^4.0.0-beta.8",
-    "@angular/animations": "^8.1.1",
+    "@angular/animations": "^8.2.0-next.1",
     "@angular/cdk": "^8.0.0",
-    "@angular/common": "^8.1.1",
+    "@angular/common": "^8.2.0-next.1",
     "@angular/compiler": "^8.1.1",
-    "@angular/core": "^8.1.1",
-    "@angular/forms": "^8.1.1",
-    "@angular/http": "^7.2.15",
+    "@angular/core": "^8.2.0-next.1",
+    "@angular/forms": "^8.2.0-next.1",
     "@angular/material": "^8.0.2",
-    "@angular/platform-browser": "^8.1.1",
-    "@angular/platform-browser-dynamic": "^8.1.1",
-    "@angular/router": "^8.1.1",
+    "@angular/platform-browser": "^8.2.0-next.1",
+    "@angular/platform-browser-dynamic": "^8.2.0-next.1",
+    "@angular/router": "^8.2.0-next.1",
     "@iapps/ngx-dhis2-data-filter": "^1.0.0-beta.3",
     "@iapps/ngx-dhis2-http-client": "^2.0.2",
     "@iapps/ngx-dhis2-org-unit-filter": "^1.0.17",
@@ -46,19 +45,19 @@
     "ngx-color-picker": "^7.4.0",
     "ngx-pagination": "^3.1.1",
     "rxjs": "^6.5.2",
-    "zone.js": "^0.9.1"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.0",
-    "@angular-devkit/build-ng-packagr": "~0.13.0",
-    "@angular/cli": "~7.3.9",
-    "@angular/compiler-cli": "^8.1.1",
-    "@angular/language-service": "^8.1.1",
+    "@angular-devkit/build-angular": "~0.801.1",
+    "@angular-devkit/build-ng-packagr": "~0.801.1",
+    "@angular/cli": "~8.1.1",
+    "@angular/compiler-cli": "^8.2.0-next.1",
+    "@angular/language-service": "^8.2.0-next.1",
     "@ngrx/schematics": "^7.4.0",
     "@types/jasmine": "~3.3.12",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~12.0.2",
-    "codelyzer": "~5.0.1",
+    "codelyzer": "^5.0.1",
     "commitizen": "^3.1.1",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^2.3.0",
@@ -69,13 +68,13 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "ng-packagr": "^5.0.1",
+    "ng-packagr": "^5.1.0",
     "protractor": "^6.0.0",
     "ts-node": "~8.2.0",
-    "tsickle": ">=0.25.5",
-    "tslib": "^1.9.0",
+    "tsickle": "^0.35.0",
+    "tslib": "^1.10.0",
     "tslint": "~5.16.0",
-    "typescript": "^3.4.5"
+    "typescript": "~3.4.5"
   },
   "config": {
     "commitizen": {
