--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "@angular/platform-browser": "^8.2.0-next.1",
     "@angular/platform-browser-dynamic": "^8.2.0-next.1",
     "@angular/router": "^8.2.0-next.1",
-    "@iapps/ngx-dhis2-data-filter": "^1.0.0-beta.3",
-    "@iapps/ngx-dhis2-http-client": "^2.0.2",
-    "@iapps/ngx-dhis2-org-unit-filter": "^1.0.17",
+    "@iapps/ngx-dhis2-data-filter": "file:../../../../../developments/typescript/ngx-dhis2-data-filter/dist/ngx-dhis2-data-filter/iapps-ngx-dhis2-data-filter-1.0.0-beta.7.tgz",
+    "@iapps/ngx-dhis2-http-client": "^2.0.7",
+    "@iapps/ngx-dhis2-org-unit-filter": "^1.1.20",
     "@iapps/ngx-dhis2-period-filter": "^1.0.0-beta.6",
     "@ngrx/effects": "^8.1.0",
     "@ngrx/entity": "^8.1.0",
