--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@angular/platform-browser": "^8.2.0-next.1",
     "@angular/platform-browser-dynamic": "^8.2.0-next.1",
     "@angular/router": "^8.2.0-next.1",
+    "@hisptz/ngx-dhis2-http-client": "^2.0.2",
     "@iapps/ngx-dhis2-data-filter": "^1.0.0-beta.8",
     "@iapps/ngx-dhis2-http-client": "^2.0.7",
     "@iapps/ngx-dhis2-org-unit-filter": "^1.1.20",
     "@iapps/ngx-dhis2-period-filter": "^1.0.0-beta.6",
+    "@iapps/ngx-dhis2-validation-rule-group-filter": "^1.0.0-alpha.13",
     "@ngrx/effects": "^8.1.0",
     "@ngrx/entity": "^8.1.0",
     "@ngrx/store": "^8.1.0",
