chore(package.json): update library version to 1.0.8-beta.1

--- a/projects/ngx-dhis2-selection-filters/package.json
+++ b/projects/ngx-dhis2-selection-filters/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@iapps/ngx-dhis2-selection-filters",
-  "version": "1.0.7",
+  "version": "1.0.8-beta.1",
   "peerDependencies": {
     "@angular/common": "^6.0.0 || ^7.0.0 || ^8.0.0",
     "@angular/core": "^6.0.0 || ^7.0.0 || ^8.0.0",
