--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
   "private": true,
   "dependencies": {
     "@angular/animation": "^4.0.0-beta.8",
-    "@angular/animations": "^8.2.0-next.1",
+    "@angular/animations": "^8.2.0-next.2",
     "@angular/cdk": "^8.1.1",
-    "@angular/common": "^8.2.0-next.1",
-    "@angular/compiler": "^8.1.2",
-    "@angular/core": "^8.2.0-next.1",
-    "@angular/forms": "^8.2.0-next.1",
+    "@angular/common": "^8.2.0-next.2",
+    "@angular/compiler": "^8.2.0-next.2",
+    "@angular/core": "^8.2.0-next.2",
+    "@angular/forms": "^8.2.0-next.2",
     "@angular/material": "^8.1.1",
-    "@angular/platform-browser": "^8.2.0-next.1",
-    "@angular/platform-browser-dynamic": "^8.2.0-next.1",
-    "@angular/router": "^8.2.0-next.1",
+    "@angular/platform-browser": "^8.2.0-next.2",
+    "@angular/platform-browser-dynamic": "^8.2.0-next.2",
+    "@angular/router": "^8.2.0-next.2",
     "@hisptz/ngx-dhis2-http-client": "^2.0.2",
     "@iapps/ngx-dhis2-data-filter": "^1.0.0-beta.9",
     "@iapps/ngx-dhis2-http-client": "^2.0.7",
@@ -50,11 +50,11 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.1",
-    "@angular-devkit/build-ng-packagr": "~0.801.1",
-    "@angular/cli": "~8.1.1",
-    "@angular/compiler-cli": "^8.2.0-next.1",
-    "@angular/language-service": "^8.2.0-next.1",
+    "@angular-devkit/build-angular": "~0.801.2",
+    "@angular-devkit/build-ng-packagr": "~0.801.2",
+    "@angular/cli": "~8.1.2",
+    "@angular/compiler-cli": "^8.2.0-next.2",
+    "@angular/language-service": "^8.2.0-next.2",
     "@ngrx/schematics": "^8.1.0",
     "@types/jasmine": "~3.3.12",
     "@types/jasminewd2": "~2.0.3",
