--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@iapps/ngx-dhis2-http-client": "^2.0.7",
     "@iapps/ngx-dhis2-org-unit-filter": "^1.1.20",
     "@iapps/ngx-dhis2-period-filter": "^1.0.0-beta.13",
+    "@iapps/ngx-dhis2-selection-filters": "file:dist/ngx-dhis2-selection-filters/iapps-ngx-dhis2-selection-filters-1.0.8-beta.3.tgz",
     "@iapps/ngx-dhis2-validation-rule-group-filter": "^1.0.0-alpha.15",
     "@ngrx/effects": "^8.1.0",
     "@ngrx/entity": "^8.1.0",
