--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-dhis2-data-selection-filters",
-  "version": "0.0.0",
+  "version": "1.0.8-beta.5",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy-config.json",
