--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,9 @@ before_install:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+  - sudo apt autoremove
+  - apt-get update
+
 
 cache:
   directories:
@@ -39,6 +42,7 @@ notifications:
   email:
     recipients:
       - rajeyw@gmail.com
+      - walterplatnumz@gmail.com
     on_failure: always
     on_success: always
   slack: hisptz:2UQgrRwNrI14ohefnnPyzms7
