chore(.codeclimate.yml): updated codeclimate configurations
This commit will update the code climate configurations

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,26 +1,61 @@
-version: '2'
-exclude_patterns:
-  - 'docs'
-  - 'documentation'
-  - 'dist'
-  - '**/*.log'
-  - '**/*.ico'
-  - 'e2e/'
-  - 'demo/assets/'
-  - 'demo/typings.d.ts'
-  - '**/*.spec.ts'
-  - '**/karma.conf.js'
-  - 'demo/polyfills.ts'
-  - 'demo/test.ts'
-plugins:
+# version: '2'
+# exclude_patterns:
+#   - 'docs'
+#   - 'documentation'
+#   - 'dist'
+#   - '**/*.log'
+#   - '**/*.ico'
+#   - 'e2e/'
+#   - 'demo/assets/'
+#   - 'demo/typings.d.ts'
+#   - '**/*.spec.ts'
+#   - '**/karma.conf.js'
+#   - 'demo/polyfills.ts'
+#   - 'demo/test.ts'
+# plugins:
+#   csslint:
+#     enabled: true
+#   editorconfig:
+#     enabled: true
+#     config:
+#       editorconfig: .editorconfig
+#   git-legal:
+#     enabled: true
+#   tslint:
+#     enabled: true
+#     config: tslint.json
+
+
+engines:
   csslint:
     enabled: true
-  editorconfig:
+  duplication:
     enabled: true
     config:
-      editorconfig: .editorconfig
-  git-legal:
+      languages:
+      - javascript
+  eslint:
     enabled: true
-  tslint:
+  fixme:
     enabled: true
-    config: tslint.json
+ratings:
+  paths:
+  - "**.css"
+  - "**.inc"
+  - "**.js"
+  - "**.jsx"
+  - "**.module"
+  - "**.php"
+  - "**.py"
+  - "**.rb"
+  - "**.ts"
+exclude_paths:
+- config/
+- dev-scripts
+- scripts
+- src/app
+- src/scss
+- typings
+- angular-cli.json
+- angular-cli-build.js
+- src/prism.css
